{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 96,
  "lineage": "c8367533-54fd-e2d6-af41-5da7466b6a90",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd777f4a27ad8f43",
            "domain": "vpc",
            "id": "eipalloc-0fd777f4a27ad8f43",
            "network_border_group": "ap-northeast-3",
            "private_dns": "ip-10-0-0-54.ap-northeast-3.compute.internal",
            "public_dns": "ec2-13-208-112-246.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "13.208.112.246",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2223049202ca738",
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:instance/i-09d4f561e06d92ef5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d4f561e06d92ef5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-EC2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d272a7736125dca",
            "private_dns": "ip-10-0-0-30.ap-northeast-3.compute.internal",
            "private_ip": "10.0.0.30",
            "public_ip": "15.152.33.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0518e9b1da5fd0973",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e1197509af857723"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2655825ea5d490d",
            "tags": {
              "Name": "InfraWorkshopBastionMachine"
            },
            "tags_all": {
              "Name": "InfraWorkshopBastionMachine"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1197509af857723"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_subnet.ssh",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2223049202ca738",
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:instance/i-030d15664cd2e36e1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030d15664cd2e36e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test-EC2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0385dec1e6684ff0b",
            "private_dns": "ip-10-0-0-38.ap-northeast-3.compute.internal",
            "private_ip": "10.0.0.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067363dbfd4f4e289",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0559f899059890e6f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016a7df0efad36841",
            "tags": {
              "Name": "InfraWorkshopDatabaseMachine"
            },
            "tags_all": {
              "Name": "InfraWorkshopDatabaseMachine"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0559f899059890e6f"
            ]
          },
          "dependencies": [
            "aws_security_group.db",
            "aws_subnet.db",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2223049202ca738",
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:instance/i-030d7b0129d1bdfe8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030d7b0129d1bdfe8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-EC2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f3a2cbf4aebbf651",
            "private_dns": "ip-10-0-0-84.ap-northeast-3.compute.internal",
            "private_ip": "10.0.0.84",
            "public_ip": "13.208.215.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-052b002811b77f2aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e1197509af857723"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0814ad27111a7a93a",
            "tags": {
              "Name": "InfraWorkshopWebMachine"
            },
            "tags_all": {
              "Name": "InfraWorkshopWebMachine"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1197509af857723"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_subnet.web",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:internet-gateway/igw-0c6acdedf426425ea",
            "id": "igw-0c6acdedf426425ea",
            "owner_id": "149580799042",
            "tags": {
              "Name": "InfraWorkshopGateway"
            },
            "tags_all": {
              "Name": "InfraWorkshopGateway"
            },
            "vpc_id": "vpc-0a3580ec776ea5eca"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd777f4a27ad8f43",
            "connectivity_type": "public",
            "id": "nat-0ba753eeaecd47f1c",
            "network_interface_id": "eni-014a52afac5e49e4f",
            "private_ip": "10.0.0.23",
            "public_ip": "13.208.112.246",
            "subnet_id": "subnet-0d2655825ea5d490d",
            "tags": {
              "Name": "InfraWorkshoptNatGateway"
            },
            "tags_all": {
              "Name": "InfraWorkshoptNatGateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:route-table/rtb-01b1db0947d1c5f3b",
            "id": "rtb-01b1db0947d1c5f3b",
            "owner_id": "149580799042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ba753eeaecd47f1c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a3580ec776ea5eca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:route-table/rtb-0511a1b477c305e3e",
            "id": "rtb-0511a1b477c305e3e",
            "owner_id": "149580799042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6acdedf426425ea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a3580ec776ea5eca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f682c966823a02c",
            "route_table_id": "rtb-01b1db0947d1c5f3b",
            "subnet_id": "subnet-016a7df0efad36841"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.db",
            "aws_subnet.db",
            "aws_subnet.ssh",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a351d6386106ba9",
            "route_table_id": "rtb-0511a1b477c305e3e",
            "subnet_id": "subnet-0d2655825ea5d490d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.igw",
            "aws_subnet.ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9249fa3849f1bec",
            "route_table_id": "rtb-0511a1b477c305e3e",
            "subnet_id": "subnet-0814ad27111a7a93a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.igw",
            "aws_subnet.web",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07310ba321282a251",
            "route_table_id": "rtb-0511a1b477c305e3e",
            "subnet_id": "subnet-0e5e80b4b6d81f2e0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.igw",
            "aws_subnet.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:security-group/sg-0559f899059890e6f",
            "description": "InfraWorkshopDbSecurityGroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0559f899059890e6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/27"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.64/26",
                  "10.0.0.128/26"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "InfraWorkshopDbSecurityGroup",
            "name_prefix": "",
            "owner_id": "149580799042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "InfraWorkshopDbSecurityGroup"
            },
            "tags_all": {
              "Name": "InfraWorkshopDbSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3580ec776ea5eca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.ssh",
            "aws_subnet.web",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:security-group/sg-0e1197509af857723",
            "description": "InfraWorkshopSshSecurityGroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1197509af857723",
            "ingress": [
              {
                "cidr_blocks": [
                  "58.233.49.43/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "InfraWorkshopSshSecurityGroup",
            "name_prefix": "",
            "owner_id": "149580799042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "InfraWorkshopSshSecurityGroup"
            },
            "tags_all": {
              "Name": "InfraWorkshopSshSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3580ec776ea5eca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:security-group/sg-02ba4c1a8ca4a65c4",
            "description": "InfraWorkshopWebSecurityGroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ba4c1a8ca4a65c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/27"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "InfraWorkshopWebSecurityGroup",
            "name_prefix": "",
            "owner_id": "149580799042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "InfraWorkshopWebSecurityGroup"
            },
            "tags_all": {
              "Name": "InfraWorkshopWebSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3580ec776ea5eca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.ssh",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:subnet/subnet-016a7df0efad36841",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016a7df0efad36841",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149580799042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "InfraWorkshopPrivateSubnet"
            },
            "tags_all": {
              "Name": "InfraWorkshopPrivateSubnet"
            },
            "vpc_id": "vpc-0a3580ec776ea5eca"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:subnet/subnet-0d2655825ea5d490d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2655825ea5d490d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149580799042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "InfraWorkshopBastionSubnet"
            },
            "tags_all": {
              "Name": "InfraWorkshopBastionSubnet"
            },
            "vpc_id": "vpc-0a3580ec776ea5eca"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:subnet/subnet-0814ad27111a7a93a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0814ad27111a7a93a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149580799042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "InfraWorkshopPublicSubnet0"
            },
            "tags_all": {
              "Name": "InfraWorkshopPublicSubnet0"
            },
            "vpc_id": "vpc-0a3580ec776ea5eca"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:subnet/subnet-0e5e80b4b6d81f2e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5e80b4b6d81f2e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149580799042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "InfraWorkshopPublicSubnet1"
            },
            "tags_all": {
              "Name": "InfraWorkshopPublicSubnet1"
            },
            "vpc_id": "vpc-0a3580ec776ea5eca"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:vpc/vpc-0a3580ec776ea5eca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0991d46a1cfc4263a",
            "default_route_table_id": "rtb-06e7a9e7529aeabff",
            "default_security_group_id": "sg-0986b0f3b8fd4cedc",
            "dhcp_options_id": "dopt-0b205ccb08e822933",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a3580ec776ea5eca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e7a9e7529aeabff",
            "owner_id": "149580799042",
            "tags": {
              "Name": "InfraWorkshop"
            },
            "tags_all": {
              "Name": "InfraWorkshop"
            }
          }
        }
      ]
    }
  ]
}